Integrated Myo.js library

--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>OUR APP NAME</title>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <title>Tremedic</title>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
     <script type="text/javascript" src="javascripts/login.js"></script>
 
     <!-- Styling -->
