--- a/views/report.html
+++ b/views/report.html
@@ -7,8 +7,6 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.min.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js'></script>
     <script type="text/javascript" src="/javascripts/myo.js"></script>
-    <script type="text/javascript" src="/javascripts/myo.experimental.js"></script>
-
 
     <!-- Styling -->
     
@@ -21,59 +19,8 @@
     <![endif]-->
   </head>
   <body>
-    Myo.js Test
 
-    <div id='log'></div>
-    <div id='busy'></div>
-    <div id='ble'>---</div>
-
-
-    <div id='pan'>
-      <div id='pan_x'></div>
-      <div id='pan_y'></div>
-    </div>
-
-    <div id='y'></div>
-    <div id='z'></div>
-
-    <div class='images'>
-      <img id='fist' src='/images/fist.png' />
-      <img id='spread' src='/images/spread.png' />
-      <img id='thumb_to_pinky' src='/images/unlock.png' />
-      <img id='wave_in' src='/images/wave_left.png' />
-      <img id='wave_out' src='/images/wave_right.png' />
-    </div>
-
-
-    <h3>Gyroscope</h3>
-    <div id='gyroscope' style="width:800px;height:200px;"></div>
-    <h3>Accelerometer</h3>
-    <div id='accelerometer' style="width:800px;height:200px;"></div>
-    <h3>Orientation</h3>
-    <div id='orientation' style="width:800px;height:200px;"></div>
-
-<style>
-  #pan{
-    border : 1px solid black;
-    width : 100px;
-    height : 100px;
-    position:relative;
-  }
-  #pan_x{
-    position : absolute;
-    border-bottom : 1px solid black;
-    width : 100%;
-  }
-  #pan_y{
-    position : absolute;
-    border-right : 1px solid black;
-    height : 100%;
-  }
-  .images img{
-    width : 100px;
-    display: none;
-  }
-</style>
+  <div id="data"></div>
 
     <script type="text/javascript" src="/javascripts/report.js"></script>
 
