--- a/views/report.html
+++ b/views/report.html
@@ -1,29 +1,44 @@
-<html>
-  <head>
-    <title>Tremedic</title>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<!DOCTYPE html>
+<html class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Main | Hack the North</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.min.js'></script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js'></script>
-    <script type="text/javascript" src="/javascripts/myo.js"></script>
-
-    <!-- Styling -->
+        <link rel="stylesheet" href="stylesheets/normalize.min.css">
+        <link rel="stylesheet" href="stylesheets/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    </head>
+    <body>
+	  <div class="branding"><img src="images/logo.png" alt="logo"/></div>     
+	<div class="profilewrap">
+    <div class="profile">
+    <span class="name"><span class="bold">Name:</span> John Green</span>
+    <span class="dob"><span class="bold">DOB:</span> 09/20/950</span>
+    <span class="phone"><span class="bold">Phone:</span> 519 231 2942</span>
+   	 <input name="" type="button" value="Logout" id="logout" >
+    </div>
+    </div>
     
+    
+    <div id="graph"></div>
+    
+    <div id="datawrap">
+    
+    <div class="data"><span class="tremor-data">17</span> Tremor Magnitude</div>
+        <div class="data"><span class="tremor-data">20</span> Tremor Magnitude</div>
+    <div class="data"><span class="duration-data">1:30</span>Time Elapsed (hr)</div>
+    
+    </div>
+    
+    <div class="error">We detected a significant change in your tremor rate. An email has been sent to your doctor. </div>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
 
-  <div id="data"></div>
-
-    <script type="text/javascript" src="/javascripts/report.js"></script>
-
-
-  </body>
+<footer>
+<div class="copyright">Copyright © 2014 Tremedic</div>
+</footer>
+    </body>
 </html>
