--- a/views/report.html
+++ b/views/report.html
@@ -6,7 +6,8 @@
         <title>Main | Hack the North</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="stylesheets/normalize.min.css">
         <link rel="stylesheet" href="stylesheets/main.css">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
