--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,8 @@
         <title>Tremedic | Hack the North</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="stylesheets/normalize.min.css">
         <link rel="stylesheet" href="stylesheets/main.css">
          <link rel="stylesheet" href="stylesheets/animate.css">
