--- a/views/report.html
+++ b/views/report.html
@@ -40,6 +40,7 @@
 
 <footer>
 <div class="copyright">Copyright © 2014 Tremedic</div>
+   	 <input name="" type="button" value="Send Email" id="yolo" ></div>
 </footer>
     </body>
 </html>
