--- a/views/report.html
+++ b/views/report.html
@@ -20,10 +20,12 @@
   </head>
   <body>
 
-  <div id="data"></div>
+  <div id="chart" style="width: 100%;"></div>
 
-    <script type="text/javascript" src="/javascripts/report.js"></script>
+  <script src="http://code.highcharts.com/stock/highstock.js"></script>
+  <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
 
+  <script type="text/javascript" src="/javascripts/report.js"></script>
 
   </body>
 </html>
