--- a/views/login.html
+++ b/views/login.html
@@ -33,7 +33,7 @@
            <form action="" method="post">
            <input name="" type="text" placeholder="username" id="username">
            <input name="" type="password" placeholder="password" id="password">
-          <a href="/"> <input name="" type="button" value="Log In" id="login" ></a>
+          <a href="report"> <input name="" type="button" value="Log In" id="login" ></a>
            </form>
             <div class="back"><a href="/">← Back</a></div>
            </div>
