--- a/views/report.html
+++ b/views/report.html
@@ -23,13 +23,14 @@
       <div class="profilewrap">
         <div class="profile">
           <span class="name"><span class="bold">Name:</span> John Green</span>
-          <span class="dob"><span class="bold">DOB:</span> 09/20/950</span>
-          <span class="phone"><span class="bold">Phone:</span> 519 231 2942</span>
-         	 <input name="" type="button" value="Logout" id="logout" >
+          <span class="dob"><span class="bold">DOB:</span> 09/20/1950</span>
+          <span class="phone"><span class="bold">Phone:</span> 519 231 1942</span>
+         	 <a href="login"><input name="" type="button" value="Logout" id="logout" ></a>
         </div>
       </div>
-
-      <div id="chart" style="width: 100%;"></div>
+<div id="chartwrap">
+      <div id="chart"></div>
+      </div>
       
       <div id="datawrap">      
         <div class="data"><span class="tremor-data">17</span> Mean Tremor Magnitude</div>
@@ -39,9 +40,7 @@
       
       <div class="error">We detected a significant change in your tremor rate. An email has been sent to your doctor.</div>
 
-      <footer>
-        <div class="copyright">Copyright © 2014 Tremedic</div>
-      </footer>
+    
 
 
 <footer>
