--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -376,7 +376,7 @@ h2.features {
 }
 
 #datawrap {
-	width: 550px;
+	width: 700px;
 	margin: 30px auto;
 	overflow: hidden;
 	padding: 60px;
@@ -437,6 +437,20 @@ h2.features {
 	border: 1px solid #333;
 }
 
+#chart {
+	padding-top: 40px;
+	margin: 0 auto;
+	width: 80%;
+	border-bottom: 1px solid #eaeaea;
+	padding-bottom: 40px;
+}
+
+
+tspan {
+	font-size: 25px;
+	font-family: Montserrat;
+	letter-spacing: -1px;
+}
 /* ===============
     ALL: IE Fixes
    =============== */
