--- a/views/report.html
+++ b/views/report.html
@@ -25,7 +25,8 @@
           <span class="name"><span class="bold">Name:</span> John Green</span>
           <span class="dob"><span class="bold">DOB:</span> 09/20/1950</span>
           <span class="phone"><span class="bold">Phone:</span> 519 231 1942</span>
-         	 <a href="login"><input name="" type="button" value="Logout" id="logout" ></a>
+           <a href="history"><input name="" type="button" value="View History " id="history" ></a>
+         	 <a href="/"><input name="" type="button" value="Logout" id="logout" ></a>
         </div>
       </div>
 <div id="chartwrap">
@@ -40,12 +41,13 @@
       
       <div class="error">We detected a significant change in your tremor rate. An email has been sent to your doctor.</div>
 
-    
+     <input name="" type="button" value="Send Email" id="yolo" >
 
 
 <footer>
+	
 <div class="copyright">Copyright © 2014 Tremedic</div>
-   	 <input name="" type="button" value="Send Email" id="yolo" ></div>
+  
 </footer>
 
       <script src="http://code.highcharts.com/stock/highstock.js"></script>
