Fix email button

--- a/views/report.html
+++ b/views/report.html
@@ -39,7 +39,7 @@
       <div class="secret-title">Secret Menu</div>
       <input name="" type="button" value="Send Morning Text" class="secret text" id="text-button">
       &nbsp;
-      <input name="" type="button" value="Send Alert Email" class="secret" >
+      <input name="" type="button" value="Send Alert Email" class="secret" id="email-button">
     </div>
     
 <footer>
