--- a/views/live.html
+++ b/views/live.html
@@ -47,7 +47,7 @@
 
       <script src="http://code.highcharts.com/stock/highstock.js"></script>
       <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
-      <script type="text/javascript" src="/javascripts/report.js"></script>
+      <script type="text/javascript" src="/javascripts/live.js"></script>
 
     </body>
 </html>
