--- a/views/report.html
+++ b/views/report.html
@@ -25,15 +25,21 @@
           <span class="name"><span class="bold">Name:</span> John Green</span>
           <span class="dob"><span class="bold">DOB:</span> 09/20/1950</span>
           <span class="phone"><span class="bold">Phone:</span> 519 231 1942</span>
-           <a href="live"><input name="" type="button" value="View Live " id="report" ></a>
-             <a href="/"><input name="" type="button" value="Logout" id="logout" ></a>
+          <a href="live"><input name="" type="button" value="View Live " id="report" ></a>
+          <a href="/"><input name="" type="button" value="Logout" id="logout" ></a>
         </div>
       </div>
-      <div id="chartwrap">
-        <div id="chart"></div>
+
+      <div id="chart-frequency"></div>
+
+      <div class="notification notification-success">
+          <i class="fa fa-check-circle"></i>
+          <span><p style="margin: 5px 3px 0px 0px;">&times;</p></span>
+          <p>We detected a significant improvement in your tremor rate! An email has been sent to your doctor.</p>
       </div>
+
+      <div id="chart-magnitude"></div>
       
-    <div class="error">We detected a significant change in your tremor rate. An email has been sent to your doctor.</div>
 
     <div class="secret-block">
       <div class="secret-title">Secret Menu</div>
@@ -51,6 +57,7 @@
       <script src="http://code.highcharts.com/stock/highstock.js"></script>
       <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
       <script type="text/javascript" src="/javascripts/report.js"></script>
+      <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     </body>
 </html>
