--- a/views/live.html
+++ b/views/live.html
@@ -34,9 +34,9 @@
       </div>
       
       <div id="datawrap">      
-        <div class="data"><span class="tremor-data">17</span> Mean Tremor Magnitude</div>
-          <div class="data"><span class="tremor-data">20</span> Mean Tremor Frequency</div>
-        <div class="data"><span class="duration-data">1:30</span>Time Elapsed (hr)</div>
+        <div class="data"><span class="tremor-data"><span id="magnitude-data">76</span>°</span> Mean Tremor Magnitude</div>
+          <div class="data"><span class="tremor-data" id="freq-data">3.1</span> Mean Tremor Frequency</div>
+        <div class="data"><span class="duration-data">1:34</span>Time Elapsed (hr)</div>
       </div>
 
 <footer>
