--- a/views/login.html
+++ b/views/login.html
@@ -22,7 +22,7 @@
     <div class="branding"><img src="images/logo.png" alt="logo"/></div>
     
     <div class="panel">
-    <h1>Parkinson's tracking made objective</h1>
+    <h1>Parkinson's Tracking Made Objective</h1>
     <div class="panel_form">
     <input name="" type="button" value="Log In" id="login_b" onclick="javascript:display()">     
     <input name="" type="button" value="Register" id="register_b" >
