--- a/views/login.html
+++ b/views/login.html
@@ -59,7 +59,7 @@
             <h2 class="about">About Tremedic</h2>
             
             <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis semper pharetra est eget rhoncus. Phasellus eget fringilla odio. Curabitur sit amet quam sapien. Sed mauris massa, varius sit amet lacus in, vehicula ultrices risus. Nulla eget nulla tellus. 
+            For patients suffering from Parkinson's Disease, Tremedic quantifies and analyses the patient's symptoms via a wearable armband for treatment efficacy and diagnostic purposes.
             </p>
            
            <div class="sep"></div>
