--- a/views/login.html
+++ b/views/login.html
@@ -61,6 +61,15 @@
             <p>
             For patients suffering from Parkinson's Disease, Tremedic quantifies and analyses the patient's symptoms via a wearable armband for treatment efficacy and diagnostic purposes.
             </p>
+
+            <p>
+              TREMEDIC can aid in…
+              <ul>
+                <li>Diagnosis: A reduction in tremor upon the administration of levodopa supports a diagnosis of Parkinson’s disease. Tremedic provides an effective, objective measure of any changes in tremor magnitude to determine whether a patient responds well to levodopa, thereby confirming or refuting the diagnosis.</li>
+                <li>Monitoring: Tremedic offers continuous tracking of a patient’s symptoms while the patient goes about his or her daily life. Physicians can view and export Tremedic data records in our easy-to-use web application to identify trends in symptoms.</li>
+                <li>Treatment: The efficacy of a treatment can now be determined through quantitative comparisons from Tremedic data.</li>
+              </ul>
+            </p>
            
            <div class="sep"></div>
            
